﻿###1.5: Currently Unnamed Update#!#20201220#!#
x Supports BepInEx plugins
x Rewritten saved config from encrypted txt to json so it can be viewed and changed outside the game
- Added several new provided UIelements
 + OpHoldButton: Circular Hold Button which can also be used as ProgressButton
 + OpContainer: FContainer in Config screen which you can add FSprite on your own
 x OpComboBox: WIP
- OpImage now has scale field, and can set color for Texture2D version. Also color is now properly initialized to white (Thanks to Slime_Cubed and Garrakx).
- ﻿LabelTest's xml documents are improved, and GetFont method is added for getting fontName for FLabels
###1.4.4.4#!#20201210#!#
1.4.4.4
- ConfigMachine's InternalTranslator is less likely to break
- Fixed OpSimpleButton's label's position is not updating
- Fixed Real-time translation function for mod translators
1.4.4.3
- Fixed LabelTest functioning incorrectly with ComMod's scaled font
- Fixed potential NullRef spam in exceptionLog from 1.4.4.2
- Tweaked invaild ModID handler
###1.4.4.2#!#20201031#!#
1.4.4.2
- Minor clean-up in old codes regarding string.Concat
- Removed arbitrary minimum size limit for OpSlider
- When you mod have invalid (for folder name) ModID, CM will try with Mod Type name, assembly name, then throw an exception if all three have failed
 + CM will still log that your mod has invalid ModID, though
- Changed Japanese's language code from jpn to jap (first three letters)
- Mods can manually call ConfigMenu.ResetCurrentConfig() to reset own OptionInterface
 + Reset now happens when the screen has faded out, making the visual more pleasing
1.4.4.1
- Fixed the new feature breaking when the mod does not support translation
1.4.4.0
- The translators for mods can now test their translation real time
 + Having the translation txt file in Rain World / ModConfigs / <ModID> folder will load that instead