@@ -27,8 +27,8 @@ Return to vanilla option menu|kor$기본 설정메뉴로 돌아가기|spa$Volver
 Save all changes and exit|kor$모든 변경사항을 저장하고 나가기|spa$Guardar todos los cambios y salir|fre$Enregistrer tous les changements et quitter|rus$Сохранить и выйти
 Save changed config of <ModID>|kor$<ModID> 모드의 바뀐 설정 저장|spa$Guardar configuración modificada de <ModID>|fre$Enregistrer les changements pour <ModID>|rus$Сохранить измененную конфигурацию: <ModID>
 Save changed config of this mod|kor$이 모드의 바뀐 설정 저장|spa$Guardar configuración modificada de este Mod|fre$Enregistrer les changements pour ce mod|rus$Сохранить изменения конфигурации этого мода
-Configure Settings for Partiality Mods|kor$Partiality 모드의 설정 관리|spa$Configurar ajustes para Partiality Mods|fre$Configurer les options pour Mods Partiality|rus$Изменить настройки модов Partiality
-This Partiality Mod cannot be configured.|kor$이 Partiality 모드는 바꿀 수 있는 설정이 없습니다.|spa$Este Partiality Mod no se puede configurar|fre$Ce Mod Partiality ne peut pas être configuré.|rus$Этот мод Partiality не может быть настроен
+Configure Settings for Rain World Mods|kor$레인월드 모드의 설정 관리|spa$Configurar ajustes para Rain World Mods|fre$Configurer les options pour Mods Rain World|rus$Изменить настройки модов Rain World
+This Rain World Mod cannot be configured.|kor$이 레인월드 모드는 바꿀 수 있는 설정이 없습니다.|spa$Este Rain World Mod no se puede configurar|fre$Ce Mod Rain World ne peut pas être configuré.|rus$Этот мод Rain World не может быть настроен
 There was an issue initializing OptionInterface.|kor$이 모드의 설정을 여는 중 문제가 발생했습니다.|spa$Hubo un problema al inicializar OptionInterface|fre$Une erreur est survenue pendant l'initialisation d'OptionInterface.|rus$При инициализации OptionInterface возникла ошибка
 No Mod can be configured|kor$설정할 수 있는 모드 없음|spa$El Mod no se puede configurar|fre$Aucun Mod ne peut être configuré|rus$Ни один мод не может быть настроен
 This issue might be resolved by downloading the latest Config Machine.|kor$최신 Config Machine으로 업데이트하면 해결될 수 있습니다.|spa$Este problema puede resolverse descargando la última versión de Config Machine.|fre$Cette erreur peut être corrigée en téléchargeant la dernière version de Config Machine.|rus$Эту ошибку можно устранить, загрузив последнюю версию Config Machine.
